--- a/package.json
+++ b/package.json
@@ -42,8 +42,10 @@
     "react-native-reanimated": "^1.13.3",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^2.18.1",
+    "react-native-slider": "^0.11.0",
     "react-native-splash-screen": "^3.2.0",
     "react-native-vector-icons": "^7.1.0",
+    "react-native-video": "^5.1.1",
     "react-navigation": "^4.4.4",
     "react-redux": "^7.2.4",
     "redux": "^4.1.0",
