--- a/ios/Podfile
+++ b/ios/Podfile
@@ -33,6 +33,8 @@ target 'RN_Redux' do
 
   pod 'react-native-background-timer', :path => '../node_modules/react-native-background-timer'
 
+  pod 'react-native-video', :path => '../node_modules/react-native-video'
+
   target 'RN_ReduxTests' do
     inherit! :complete
     # Pods for testing
