--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-native-gesture-handler": "^1.10.3",
     "react-native-gifted-chat": "^0.16.3",
     "react-native-gps-state": "^2.0.3",
+    "react-native-image-picker": "^3.3.2",
     "react-native-immediate-phone-call": "^2.0.0",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-maps": "0.27.1",
