--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-native-screens": "^2.18.1",
     "react-native-slider": "^0.11.0",
     "react-native-splash-screen": "^3.2.0",
+    "react-native-uuid": "^2.0.1",
     "react-native-vector-icons": "^7.1.0",
     "react-native-video": "^5.1.1",
     "react-navigation": "^4.4.4",
