--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@react-native-community/async-storage": "^1.12.1",
+    "@react-native-community/cameraroll": "^4.0.4",
     "@react-native-community/checkbox": "^0.4.2",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-firebase/app": "^8.4.7",
@@ -51,6 +52,7 @@
     "react-native-uuid": "^2.0.1",
     "react-native-vector-icons": "^7.1.0",
     "react-native-video": "^5.1.1",
+    "react-native-view-shot": "^3.1.2",
     "react-navigation": "^4.4.4",
     "react-redux": "^7.2.4",
     "redux": "^4.1.0",
